@@ -152,77 +152,77 @@ usage:
    echo "usage: aimk <OPTIONS>"
    echo "OPTIONS are: "
    echo ""
-   echo "-32               -> create 32 bit binaries (where supported)"
-   echo "-64               -> create 64 bit binaries (where supported)"
-   echo "-D*               -> include a macro definition in CFLAGS"
-   echo "-add-copyright    -> insert a special copyright string in each binary"
-   echo "-add-sun-copyright-> insert a Sun copyright string in each binary" 
-   echo "-adoc             -> create source code documentation in adoc format"
-   echo "-catman           -> generate man pages in catman format"
-   echo "-cc               -> use cc/CC to compile c/c++ code"
-   echo "-cov              -> complile for code coverage analysis"
-   echo "-dce              -> enable dce security"
-   echo "-debug            -> compile with debug information"
-   echo "-efence           -> compile in debug mode and detect memory leaks"
-   echo "-f                -> specify other Makefile instead of common/Makefile"
-   echo "-flags            -> print C_FLAGS and INCLUDE_FLAGS to stdout, used by gelint"
-   echo "-gcc              -> use gcc instead of system compiler (where supported)"
-   echo "-gettext          -> build the gettext libraries"
-   echo "-gprof            -> enable gprof profiling"
-   echo "-gss              -> enable gss security"
-   echo "-help             -> show this help"
-   echo "-htmlman          -> generate man and html pages"
-   echo "-htmlmankv        -> generate man and html pages checked out with '-kv' flag"
-   echo "-insure           -> compile in debug mode and detect memory leaks"
-   echo "-intl             -> compile with internationalization library (libintl)"
-   echo "-javadoc          -> create source code documentation in Javadoc[TM] tool format"
-   echo "-kerberos         -> enable kerberos authentication"
-   echo "-man              -> generate man pages"
-   echo "-mankv            -> generate man pages checked out with '-kv' flag"
-   echo "-mo               -> generate the message catalogues (Solaris only)"
-   echo "-no-core          -> don't compile the core system"
-   echo "-no-dump          -> build binaries without libcore.so (Linux only)"
-   echo "-uge-ext          -> build binaries with Univa Extensions"
-   echo "-no-java          -> don't compile Java[TM] class files"
-   echo "-no-gui-inst      -> don't compile Java[TM] GUI installer"
-   echo "-no-jni           -> don't compile JNI library"
-   echo "-no-intl          -> do not compile with internationalization library"
-   echo "-no-mk            -> only return the specific architecture string"
-   echo "-no-opt           -> compile with no optimization"
-   echo "-no-qmake         -> don't compile qmake"
-   echo "-no-qmon          -> don't compile qmon 3rdparty libs and qmon client"
-   echo "-no-qtcsh         -> don't compile qtcsh"
-   echo "-no-remote        -> don't compile 3rdparty remote module (rsh, rshd, rlogin)"
-   echo "-no-rmon          -> disable rmon debug output"
-   echo "-no-secure        -> disable ssl security (enabled by default)"
-   echo "-no-jemalloc      -> disable jemalloc (enabled by default on Linux hosts)"
-   echo "-no-mtmalloc      -> disable mtmalloc (this is needed for dbx debugging)"
-   echo "-no-plpa          -> disable plpa support (enabled by default on Linux hosts)"
-   echo "-only-core        -> build only the core system"
-   echo "-only-depend      -> only compile 3rdparty/sge_depend"
-   echo "-only-java        -> only compile Java[TM] class files"
-   echo "-only-gui-inst    -> only compile Java[TM] GUI installer"
-   echo "-only-jemalloc    -> build only the jemalloc library"
-   echo "-only-qmake       -> build only qmake"
-   echo "-only-qmon        -> build only qmon 3rdparty libs and qmon client"
-   echo "-only-qtcsh       -> build only qtcsh"
-   echo "-only-remote      -> build only 3rdparty remote module (rsh, rshd, rlogin)"
-   echo "-only-64          -> build only 64 bit shared libraries for SOLARIS64, don't build 32 bit shared libraries"
-   echo "-parallel n       -> spawn multiple make processes by passing option -j n to make"
-   echo "-perlgui          -> build the experimental perlgui"
-   echo "-po               -> merge gridengine .pot with translations (Linux)"
-   echo "-pot              -> extract message template to gridengine .pot file (Linux)"
-   echo "-protected        -> create complete class file documentation"
-   echo "-purify           -> instrument code with purify (implies -debug)"
-   echo "-qmake            -> use qmake instead of make"
-   echo "-shared-libs      -> create libraries as shared libs"
-   echo "-spool-berkeleydb -> use berkeleydb spooling"
-   echo "-spool-classic    -> use classic flatfile spooling"
-   echo "-spool-targets    -> only create qmaster, spooldefaults and spoolinit"
-   echo "-univaman         -> create man pages for Univa branded man pages (with -man[kv])"
-   echo "-tight-ssh        -> compile SSH daemon with tight SGE integration"
-   echo "-umap             -> compile with usermapping and hostgroup feature"
-   echo "-with-jemalloc    -> build SGE with the jemalloc library"
+   echo "-32                  -> create 32 bit binaries (where supported)"
+   echo "-64                  -> create 64 bit binaries (where supported)"
+   echo "-D*                  -> include a macro definition in CFLAGS"
+   echo "-add-copyright       -> insert a special copyright string in each binary"
+   echo "-add-univa-copyright -> insert a Univa copyright string in each binary"
+   echo "-adoc                -> create source code documentation in adoc format"
+   echo "-catman              -> generate man pages in catman format"
+   echo "-cc                  -> use cc/CC to compile c/c++ code"
+   echo "-cov                 -> complile for code coverage analysis"
+   echo "-dce                 -> enable dce security"
+   echo "-debug               -> compile with debug information"
+   echo "-efence              -> compile in debug mode and detect memory leaks"
+   echo "-f                   -> specify other Makefile instead of common/Makefile"
+   echo "-flags               -> print C_FLAGS and INCLUDE_FLAGS to stdout, used by gelint"
+   echo "-gcc                 -> use gcc instead of system compiler (where supported)"
+   echo "-gettext             -> build the gettext libraries"
+   echo "-gprof               -> enable gprof profiling"
+   echo "-gss                 -> enable gss security"
+   echo "-help                -> show this help"
+   echo "-htmlman             -> generate man and html pages"
+   echo "-htmlmankv           -> generate man and html pages checked out with '-kv' flag"
+   echo "-insure              -> compile in debug mode and detect memory leaks"
+   echo "-intl                -> compile with internationalization library (libintl)"
+   echo "-javadoc             -> create source code documentation in Javadoc[TM] tool format"
+   echo "-kerberos            -> enable kerberos authentication"
+   echo "-man                 -> generate man pages"
+   echo "-mankv               -> generate man pages checked out with '-kv' flag"
+   echo "-mo                  -> generate the message catalogues (Solaris only)"
+   echo "-no-core             -> don't compile the core system"
+   echo "-no-dump             -> build binaries without libcore.so (Linux only)"
+   echo "-uge-ext             -> build binaries with Univa Extensions"
+   echo "-no-java             -> don't compile Java[TM] class files"
+   echo "-no-gui-inst         -> don't compile Java[TM] GUI installer"
+   echo "-no-jni              -> don't compile JNI library"
+   echo "-no-intl             -> do not compile with internationalization library"
+   echo "-no-mk               -> only return the specific architecture string"
+   echo "-no-opt              -> compile with no optimization"
+   echo "-no-qmake            -> don't compile qmake"
+   echo "-no-qmon             -> don't compile qmon 3rdparty libs and qmon client"
+   echo "-no-qtcsh            -> don't compile qtcsh"
+   echo "-no-remote           -> don't compile 3rdparty remote module (rsh, rshd, rlogin)"
+   echo "-no-rmon             -> disable rmon debug output"
+   echo "-no-secure           -> disable ssl security (enabled by default)"
+   echo "-no-jemalloc         -> disable jemalloc (enabled by default on Linux hosts)"
+   echo "-no-mtmalloc         -> disable mtmalloc (this is needed for dbx debugging)"
+   echo "-no-plpa             -> disable plpa support (enabled by default on Linux hosts)"
+   echo "-only-core           -> build only the core system"
+   echo "-only-depend         -> only compile 3rdparty/sge_depend"
+   echo "-only-java           -> only compile Java[TM] class files"
+   echo "-only-gui-inst       -> only compile Java[TM] GUI installer"
+   echo "-only-jemalloc       -> build only the jemalloc library"
+   echo "-only-qmake          -> build only qmake"
+   echo "-only-qmon           -> build only qmon 3rdparty libs and qmon client"
+   echo "-only-qtcsh          -> build only qtcsh"
+   echo "-only-remote         -> build only 3rdparty remote module (rsh, rshd, rlogin)"
+   echo "-only-64             -> build only 64 bit shared libraries for SOLARIS64, don't build 32 bit shared libraries"
+   echo "-parallel n          -> spawn multiple make processes by passing option -j n to make"
+   echo "-perlgui             -> build the experimental perlgui"
+   echo "-po                  -> merge gridengine .pot with translations (Linux)"
+   echo "-pot                 -> extract message template to gridengine .pot file (Linux)"
+   echo "-protected           -> create complete class file documentation"
+   echo "-purify              -> instrument code with purify (implies -debug)"
+   echo "-qmake               -> use qmake instead of make"
+   echo "-shared-libs         -> create libraries as shared libs"
+   echo "-spool-berkeleydb    -> use berkeleydb spooling"
+   echo "-spool-classic       -> use classic flatfile spooling"
+   echo "-spool-targets       -> only create qmaster, spooldefaults and spoolinit"
+   echo "-univaman            -> create man pages for Univa branded man pages (with -man[kv])"
+   echo "-tight-ssh           -> compile SSH daemon with tight SGE integration"
+   echo "-umap                -> compile with usermapping and hostgroup feature"
+   echo "-with-jemalloc       -> build SGE with the jemalloc library"
   exit
 }
 
