@@ -8,6 +8,8 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+DG-2011-03-18-0: Cleanup:     aimk help and qconf -help output
+
 SH-2011-03-17-0: Enhancem.:   Implemented the -suspend_remote parameter for qrsh
                  Isssue:      GE-3393
                  Review:      DG (GE-18)
